# cse306

./: .gitignore
ALU/: design.circ  main.tex
FPA/Circuits/: Added.circ  ComparatorLib.circ  FPA.circ  InputHandler.circ  MiscLib.circ  MuxLib.circ  NormalizerLib.circ  Readme.txt  RoundingMachine.circ
FPA/Libraries/: Added.circ  AdderLib.circ  EncoderLib.circ  FPA.circ  InputHandler.circ  MiscLib.circ  NormalizerLib.circ  ShiftLib.circ
FPA/Report/: main.tex
FPA/Tester/: FPA.cpp  compile_flags.txt  ic_count.txt  ic_counter.cc  total_ic_count.txt
MIPS/Assembler/: CMakeLists.txt
MIPS/Assembler/.cache/clangd/index/: main.cc.EB894701FEE074E8.idx
MIPS/Assembler/src/: assembler_context.cc  assembler_context.h  block.cc  block.h  lexer.l  main.cc  mips_instr.cc  mips_instr.h  token.cc  token.h
MIPS/AtMega/: ALU.c
MIPS/Atmega/: ALU.c  Clock.c  Control Unit.c  EEPROM.c  Instruction Fetch.c  RAM.c  RAM.cpp  Register Bank.c
MIPS/Circuits/: .Ins.hex.kate-swp  7400-lib.circ  8bit_adder.circ  ALU.circ  Adder.circ  ControlLib.circ  ExecutionLib.circ  ID.circ  Ins.hex  InstructionFetchLib.circ  MIPS.circ  Memory.circ  MuxLib.circ  PCUpdate.circ  PipelineRegister.circ  ctrl.hex
